src/objects/Product_Hierarchy__c.object
<CustomObject>
    <description>This object stores Product Financial Structure data</description>
    <fields>
        <fullName>Business_Group_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Group Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Group_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Line_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Line Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Line_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Line Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Unit Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Unit Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GIC_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GIC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio_Package_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Portfolio Package Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio_Package_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Portfolio Package Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profit_Center_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Profit Center Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profit_Center_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Profit Center Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Product Hierarchy</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FS-{000000}</displayFormat>
        <label>Product Financial Structure Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Financial Structures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>